--- a/templates/processed.html
+++ b/templates/processed.html
@@ -10,12 +10,9 @@
 <body>
     <h1>Processed Image</h1>
 
-    <h2>Final Image</h2>
-    <img src="{{ url_for('static', filename=filename) }}" alt="Processed Image">
-
     <h2>Time Taken for Processing</h2>
-    <p>t1: {{ t1 }}</p>
-    <p>t2: {{ t2 }}</p>
+    <p>steps taken: {{ t1 }}</p>
+    <p>time taken: {{ t2 }}</p>
 
     <a href="{{ url_for('download_file', filename=filename) }}" download>
         <button>Download Final Image</button>
